# linkedin-alert-intelligence-agent

./: .env.example  .gitignore  README.md  profile.json  pyproject.toml  settings.json
.github/workflows/: weekday-digest.yml
md files/: app-flow-pages-and-roles.md  design-guidelines.md  implementation-plan.md  masterplan.md
scripts/: sync_github_state_branch.sh
src/linkedin_alert_agent/: __init__.py  __main__.py  ai.py  cli.py  config.py  digest.py  emailer.py  gmail.py  models.py  normalize.py  parsers.py  pipeline.py  scoring.py  settings.py  sources.py  storage.py
tests/: test_gmail.py  test_normalize.py  test_parsers.py  test_pipeline.py  test_scoring.py  test_settings.py  test_sources.py
